--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ button:focus{
     margin-top: 2.5rem;
 }
 .modal{
-    position: absolute;
+    position: fixed;
     width: 300px;
     height: 200px;
     left:50%;
@@ -146,7 +146,7 @@ button:focus{
 .overlay{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top:0;
     left:0;
     background-color: rgba(0, 0, 0, 0.6);
